# narkesken

./: .gitignore  README.md  evaluate.py  pyproject.toml  requirements.txt  train.py
configs/: xlsr_kazakh.yaml
data_prep/: make_sample_data.py  normalize.py  prepare_dataset.py
docs/: methodology.md  references.bib
narkesken/: __init__.py  inference.py
narkesken/decoding/: __init__.py  beam_search.py  ngram_lm.py
narkesken/metrics/: __init__.py  morph_wer.py  wer.py
narkesken/morphology/: __init__.py  phonology.py  segmenter.py  suffixes.py
narkesken/text/: __init__.py  normalize.py  vocab.py
narkesken/training/: __init__.py  collator.py  config.py  trainer.py
scripts/: build_lm.py  demo_morphology.py  evaluate.py  make_sample_data.py  prepare_dataset.py  train.py  transcribe.py
tests/: test_decoding.py  test_metrics.py  test_morphology.py  test_text.py
